Bug 92305 - VIEWING: Multiple page view does not render properly when scrolling
Summary: VIEWING: Multiple page view does not render properly when scrolling
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
5.0.0.5 release
Hardware: All All
: high major
Assignee: Not Assigned
URL:
Whiteboard: target:5.1.0 target:5.0.1
Keywords: bibisected, bisected, regression
: 93118 93148 93170 93230 93312 93321 93401 93428 93507 93650 94444 (view as bug list)
Depends on:
Blocks:
 
Reported: 2015-06-24 12:43 UTC by Gordo
Modified: 2016-10-25 19:21 UTC (History)
19 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
example document (28.58 KB, application/vnd.oasis.opendocument.text)
2015-06-24 12:43 UTC, Gordo
Details
printscreen (225.41 KB, image/png)
2015-06-26 15:12 UTC, raal
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gordo 2015-06-24 12:43:49 UTC
Created attachment 116793 [details]
example document

Open attached document--it should be in multiple-page view already of two pages side by side--and scroll down and up.  The left page does not render properly.  This does not happen in 4.4.4.2.

Windows Vista 64
Version: 5.1.0.0.alpha1+
Build ID: 2885e157674dbefa7d9b984a399fabd1238eeedd
TinderBox: Win-x86@39, Branch:master, Time: 2015-06-22_07:52:27
Comment 1 raal 2015-06-26 15:12:57 UTC
Created attachment 116844 [details]
printscreen

I can confirm with Version: 5.1.0.0.alpha1+
Build ID: a7a95af74badcb745bb1c86c7f9a21444ca12c77
TinderBox: Linux-rpm_deb-x86_64@46-TDF, Branch:master, Time: 2015-06-25_09:37:54
Comment 2 John Doe 2015-07-27 18:06:58 UTC
I can confirm this bug with version 5.0.0.4 (RC4) x64.

Very annoying, it practically breaks the multi page view for me,
rendering my enormous widescreen monitor quite useless ;)

Definitely a showstopper bug that took me 1 minute to discover,
and which spoils the "v5.0 experience" for me...

OS: Windows 7 x64
Graphics Card: Radeon HD 5750, latest Catalyst drivers 15.7
Build-ID: cf112dc905650fb985306a7a03d2fe3fcc6c978f
Comment 3 Gordo 2015-08-05 18:40:24 UTC
*** Bug 93148 has been marked as a duplicate of this bug. ***
Comment 4 Gordo 2015-08-05 19:18:02 UTC
*** Bug 93118 has been marked as a duplicate of this bug. ***
Comment 5 Gordo 2015-08-06 12:47:34 UTC
*** Bug 93170 has been marked as a duplicate of this bug. ***
Comment 6 Tyler Retelle 2015-08-07 06:03:42 UTC
I can confirm this issue on the v5.0.0.5 final on Windows, both x86 and x64 builds.

This is a major showstopper for me, and I'll likely have to roll back to v4.x because of it.

OS: Windows 8.1 x64
Video: NVIDIA GTX 980
Comment 7 Gordo 2015-08-07 11:07:43 UTC
*** Bug 93230 has been marked as a duplicate of this bug. ***
Comment 8 Michael Weghorn 2015-08-07 15:57:53 UTC
(bi)bisect result (using the bibisect-50max repository):
 d462e89bab9d104563fdb193f509d2994f300034 is the first bad commit
commit d462e89bab9d104563fdb193f509d2994f300034
Author: Matthew Francis <mjay.francis@gmail.com>
Date:   Wed May 27 23:11:35 2015 +0800

    source-hash-1622b67e4b2bc8ecc5dd3ededc0a6e5adb936a6e
    
    commit 1622b67e4b2bc8ecc5dd3ededc0a6e5adb936a6e
    Author:     massinissaHamidi <hamidi.massinissa@yahoo.fr>
    AuthorDate: Thu May 7 01:53:33 2015 +0200
    Commit:     Norbert Thiebaud <nthiebaud@gmail.com>
    CommitDate: Sat May 16 04:15:48 2015 +0000
    
        tdf#90150 : Page numbering in the status bar which may cause confusion
    
        Changes :
    
        - The page number changes when a certain amount of the previous page is
          reached. This is done in SetFirstVisPage.
    
        - Since the page number (and pFirstVisPage) changes before the entire
          previous page disappear from VisArea, there is still a portion of it
          which is visible and must be added for paint. This is done with
          GetPrev.
    
        Change-Id: If7704011bc11efe88321bf448d61708097334d7d
        Reviewed-on: https://gerrit.libreoffice.org/15657
        Tested-by: Jenkins <ci@libreoffice.org>
        Reviewed-by: Norbert Thiebaud <nthiebaud@gmail.com>

:040000 040000 dd7ccc0933d48fe7fef34721163e56a57fb9ba61 620e6bcea2aa2f7cbaeebe4a1432f7597c272b11 M	opt

---

$ git bisect log
# bad: [dda106fd616b7c0b8dc2370f6f1184501b01a49e] source-hash-0db96caf0fcce09b87621c11b584a6d81cc7df86
# good: [5b9dd620df316345477f0b6e6c9ed8ada7b6c091] source-hash-2851ce5afd0f37764cbbc2c2a9a63c7adc844311
git bisect start 'latest' 'oldest'
# good: [0c30a2c797b249d0cd804cb71554946e2276b557] source-hash-45aaec8206182c16025cbcb20651ddbdf558b95d
git bisect good 0c30a2c797b249d0cd804cb71554946e2276b557
# good: [2ce02b2ce56f12b9fcb9efbd380596975a3a5686] source-hash-17d714eef491bda2512ba8012e5b3067ca19a5be
git bisect good 2ce02b2ce56f12b9fcb9efbd380596975a3a5686
# good: [40875247f0002056effdf6d2fbe43627691cd86c] source-hash-93f0b14458a618ad575cd446680e5c4aa7d87bdc
git bisect good 40875247f0002056effdf6d2fbe43627691cd86c
# skip: [61f66b1a251477193d796411ca95f50d606ead45] source-hash-3fd5f8919ec2256c70ff26c14cb9f8065c5cb2f1
git bisect skip 61f66b1a251477193d796411ca95f50d606ead45
# good: [e7374cd735af2344dae55be40946d96633d2f6ee] source-hash-8a91528a3e03fe6e2923c33327b687ecf57adb0b
git bisect good e7374cd735af2344dae55be40946d96633d2f6ee
# good: [541837707e7b0c5f5335180de535043c43e78e8d] source-hash-0811de12ee6727bbb9d4265217833ba02301eed8
git bisect good 541837707e7b0c5f5335180de535043c43e78e8d
# bad: [ab7dc1f0829167681894eb9f833d7ab348d91669] source-hash-e27ee95cced755e52b62d6cb095bc911ca3fbbe6
git bisect bad ab7dc1f0829167681894eb9f833d7ab348d91669
# good: [fa6b220d5ca96e8d2cbf8a12980ae4074b7a7fa0] source-hash-9bb59aab72d8226e0d31d71e52125b0a9474a30b
git bisect good fa6b220d5ca96e8d2cbf8a12980ae4074b7a7fa0
# bad: [1599f87e48a938167cc328c857b384a383bb44bc] source-hash-a76dcdfaa6c6d2b1d73fb1c96fe38dd7e452f48a
git bisect bad 1599f87e48a938167cc328c857b384a383bb44bc
# good: [29233aad36148580566b8bb74b8437b0f91b92c8] source-hash-32bccdb8feebb1145cfb75e61c39c317b4931553
git bisect good 29233aad36148580566b8bb74b8437b0f91b92c8
# good: [790f58737a729450e95873c4d76734f7726ff92b] source-hash-4fd045f84acff978bb2ffff1880104c3c6d22f76
git bisect good 790f58737a729450e95873c4d76734f7726ff92b
# bad: [e490b8ab5954b98f9a82680892d9b951699a340e] source-hash-4eb19ec569579137de9d835fe584e47b871c4e8c
git bisect bad e490b8ab5954b98f9a82680892d9b951699a340e
# good: [787bd03ba3de06e52d1dcf2e7047414539f5dd8e] source-hash-9d0c51daea67104349cac26de9839afa8baeb099
git bisect good 787bd03ba3de06e52d1dcf2e7047414539f5dd8e
# good: [0bb7beb3582d1bc22c975a5ff80089a4732513fc] source-hash-6664859e1e8b3f8b7db8c931b8d0335510c20ce0
git bisect good 0bb7beb3582d1bc22c975a5ff80089a4732513fc
# bad: [d462e89bab9d104563fdb193f509d2994f300034] source-hash-1622b67e4b2bc8ecc5dd3ededc0a6e5adb936a6e
git bisect bad d462e89bab9d104563fdb193f509d2994f300034
# first bad commit: [d462e89bab9d104563fdb193f509d2994f300034] source-hash-1622b67e4b2bc8ecc5dd3ededc0a6e5adb936a6e


@Hamidi Massinissa: Could you possibly have a look at this?
Comment 9 Gordo 2015-08-09 20:48:44 UTC
*** Bug 93312 has been marked as a duplicate of this bug. ***
Comment 10 Gordo 2015-08-10 12:00:48 UTC
*** Bug 93321 has been marked as a duplicate of this bug. ***
Comment 11 peter.podbevsek 2015-08-10 13:44:27 UTC
Same problem on Ubuntu 14.04 x64.

Version: 5.0.0.5
Build ID: 00m0(Build:5)
Comment 12 Tyler Retelle 2015-08-11 22:46:03 UTC
I just tried the v5.0.1.1 x64 prerelease and this bug exists in that version as well.

I'm surprised that no progress has been made on what I consider to be a very serious bug in Writer.  I've been a big fan of LibreOffice since it was first released - hopefully this can be resolved soon as I really like v5.0.

OS: Windows 8.1 x64
Video: NVIDIA GTX 980
Comment 13 Commit Notification 2015-08-12 06:20:50 UTC
Jan Holesovsky committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=0409f83a5a4f9f86fa69a9431ce5aa07be427455

tdf#92305: Revert "tdf#90150 : Page numbering in the status bar ..."

It will be available in 5.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 14 Jan Holesovsky 2015-08-12 06:31:56 UTC
Michael: Thanks so much for the bisect, the commit you've found was exactly the root cause :-)

Tyler: Sorry about the problem; it's fixed now.  Please note though that comments like "This is a major showstopper for me" or "I'm surprised that no progress has been made on what I consider..." are generally not appreciated, and in many cases counter-productive.  The seriousness of the bug is much better measured by the amount of duplicates - so it's better to spend your time triaging bugs, and finding duplicates, or helping the QA in another way.  Thanks for your support either way! :-)
Comment 15 Commit Notification 2015-08-12 12:55:13 UTC
Jan Holesovsky committed a patch related to this issue.
It has been pushed to "libreoffice-5-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=ce51de70c2dfa905e105d09f4ccd72014af159ac&h=libreoffice-5-0

tdf#92305: Revert "tdf#90150 : Page numbering in the status bar ..."

It will be available in 5.0.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 16 Maxim Monastirsky 2015-08-12 21:38:13 UTC
*** Bug 93401 has been marked as a duplicate of this bug. ***
Comment 17 Tyler Retelle 2015-08-13 23:44:11 UTC
@Jan - First of all, I want thank you for checking in a fix for the issue.  I look forward to testing it out.  I know software development is challenging, and I want you to know that I appreciate all of the hard work that goes into software, especially open source software.

I want to let you know that I never intended to offend anyone with my comments, but I feel they were relatively neutral.  This bug is frustrating, because it consistently occurs in the Print Layout multi page view.  I know that issues slip by even against rigorous testing.

I also wanted to note that I am a user of LibreOffice, and am not a developer.  I contributed this bug on behalf of myself and other users that are likely suffering from this issue.  My ability to help is quite limited other than testing updated builds and commenting.

The comment you made "The seriousness of the bug is much better measured by the amount of duplicates" seems to be a poor metric for determining the seriousness of a bug.  The vast majority of LibreOffice users likely don't know that this bug tracker even exists and only a small percentage of the ones that do will bother opening bugs on an issue.  While I don't develop software, I work in IT support and in my experience users will do one of two things most of the time when they encounter a bug - tolerate or silently suffer with the issue until it is (hopefully) fixed, or stop using the product entirely.

Again, thank you for the fix. :)
Comment 18 Adolfo Jayme Barrientos 2015-08-14 17:55:43 UTC
*** Bug 93428 has been marked as a duplicate of this bug. ***
Comment 19 Commit Notification 2015-08-15 22:20:58 UTC
Jan Holesovsky committed a patch related to this issue.
It has been pushed to "libreoffice-5-0-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=1e83e14fb118a98425c342c63b98147e4cf79d44&h=libreoffice-5-0-1

tdf#92305: Revert "tdf#90150 : Page numbering in the status bar ..."

It will be available in 5.0.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 20 Tyler Retelle 2015-08-18 04:31:20 UTC
I wanted to report that I just tried the v5.0.2.0.0 Windows x64 Dev Build and the issue is fixed in that build.  Yay!  Thanks again for effort of all involved!
Comment 21 Maxim Monastirsky 2015-08-18 11:16:21 UTC
*** Bug 93507 has been marked as a duplicate of this bug. ***
Comment 22 Maxim Monastirsky 2015-08-25 09:30:13 UTC
*** Bug 93650 has been marked as a duplicate of this bug. ***
Comment 23 Maxim Monastirsky 2015-09-30 15:02:14 UTC
*** Bug 94444 has been marked as a duplicate of this bug. ***
Comment 24 Robinson Tryon (qubit) 2015-12-17 09:14:37 UTC Comment hidden (obsolete)