sw/source/core/view/viewsh.cxx
@@ -1468,12 +1468,6 @@ void SwViewShell::PaintDesktop(vcl::RenderContext& rRenderContext, const SwRect 
     else
     {
         const SwFrm *pPage = Imp()->GetFirstVisPage(&rRenderContext);
-        //Here we have to get the previous page since
-        //GetFirstVisPage return the current one but
-        //there is a portion of the previous page
-        //which is still visible
-        if ( pPage->GetPrev() )
-            pPage = pPage->GetPrev();
         const SwTwips nBottom = rRect.Bottom();
         while ( pPage && !aRegion.empty() &&
                 (pPage->Frm().Top() <= nBottom) )
